--- a/src/main/resources/templates/ingredients.html
+++ b/src/main/resources/templates/ingredients.html
@@ -13,6 +13,9 @@
 <body>
 
 	<div class="container">
+		
+		<!--home button-->
+		<a href="/" class="btn btn-secondary text-white mt-4">Torna alla Home</a>
 
 		<h1 class="text-center my-4">Ingredienti</h1>
 		
