added button to navigate across the pages

--- a/src/main/resources/templates/pizzas.html
+++ b/src/main/resources/templates/pizzas.html
@@ -14,7 +14,7 @@
 
 		<h1 class="text-center my-4">Pizzeria Lato Oscuro</h1>
 
-		<div class="d-flex justify-content-around align-items-center">
+		<div class="d-flex justify-content-around align-items-baseline">
 
 			<!--search form-->
 			<form class="d-flex justify-content-center flex-wrap my-4">
@@ -28,11 +28,14 @@
 				<div>
 					<button class="btn btn-primary ms-4">Cerca</button>
 				</div>
-				
+
 			</form>
 
 			<!--create button-->
 			<a href="/pizzas/create" class="btn btn-info text-white">Aggiungi pizza</a>
+			
+			<!-- ingredients page -->
+				<a href="/ingredients" class="btn btn-success text-white mt-4">Pagina degli ingredienti</a>
 		</div>
 
 		<h3>Le nostre pizze:</h3>
