--- a/src/main/resources/templates/pizza.html
+++ b/src/main/resources/templates/pizza.html
@@ -13,6 +13,9 @@
 <body th:object="${pizza}">
 
 	<div class="container">
+		
+		<!--home button-->
+		<a href="/" class="btn btn-secondary text-white mt-4">Torna alla Home</a>
 
 		<h3 class="my-4 text-center"> [[*{name}]]</h3>
 
